reviewing sensors part

--- a/chapter01.tex
+++ b/chapter01.tex
@@ -336,7 +336,7 @@ Thus, as a stepping stone we can perform the dynamic and static environment clas
 
 \begin{enumerate}
 \item Build the map
-\item Perform risk assessment
+\item Perform risk assessment (Section~\ref{sec:riskassessment})
 \end{enumerate}
 
 The scene understanding usually implicates in distinguish different types of objects in the scene. This distinction can be done by using the objects' features, path perceived or even its behavior. 
@@ -344,6 +344,7 @@ The scene understanding usually implicates in distinguish different types of obj
 %multimodels, importance sampling, prior map knowledge
 
 \section{Risk Assessment}
+\label{sec:riskassessment}
 
 \textbf{Risk Assessment} is a term adopted in several fields, to indicate the mitigation of the risks involved in the target activity. 
 
