chapter 3, demonstrator laser disposition description

--- a/chapter04.tex
+++ b/chapter04.tex
@@ -11,6 +11,7 @@ Using transformational matrices we bring the car perspective \cite{iyengar1991au
 %target: dynamic and static separation, reduce the number of frames required, no classification, no association; no tracking, no 
 
 \subsection{Testbed}
+\label{sec:testbed}
 
 \subsubsection*{Hardware}
 
