--- a/report.bib
+++ b/report.bib
@@ -309,6 +309,25 @@
  keywords = {laser range scanning, mapping, range scan alignment, range scan registration, sensor-based mobile robotics},
 } 
 
+%z18
+
+%% hal-00671211, version 1
+%% http://hal.inria.fr/hal-00671211
+@inproceedings{ADARVE-2012-671211,
+    hal_id = {hal-00671211},
+    url = {http://hal.inria.fr/hal-00671211},
+    title = {{Computing Occupancy Grids from Multiple Sensors using Linear Opinion Pools}},
+    author = {Adarve, Juan David and Perrollaz, Mathias and Makris, Alexandros and Laugier, Christian},
+    abstract = {{Perception is a key component for any robotic system. In this paper we present a method to construct occupancy grids by fusing sensory information using Linear Opinion Pools. We used lidar sensors and a stereo-vision system mounted on a vehicle to make the experiments. To perform the validation, we compared the proposed method with the fusion method previously used in the Bayesian Occupancy Filter framework, using real data taken from highway and urban scenarios. The results show that our method is better at dealing with conflicting information coming from the sensors. We propose an implementation on parallel hardware which allows real-time execution.}},
+    language = {Anglais},
+    affiliation = {E-MOTION - INRIA Grenoble Rh{\^o}ne-Alpes / LIG Laboratoire d'Informatique de Grenoble},
+    booktitle = {{IEEE International Conference on Robotics and Automation}},
+    address = {St Paul, Minnesota, {\'E}tats-Unis},
+    audience = {internationale },
+    year = {2012},
+    month = May,
+}
+
 %There exists no eletronic version
 
 @phdthesis{Elfes:1989:OGP:916528,
