--- a/trunk/report.bib
+++ b/trunk/report.bib
@@ -328,6 +328,24 @@
     month = May,
 }
 
+%z19
+
+@inproceedings{Amdahl:1967:VSP:1465482.1465560,
+ author = {Amdahl, Gene M.},
+ title = {Validity of the single processor approach to achieving large scale computing capabilities},
+ booktitle = {Proceedings of the April 18-20, 1967, spring joint computer conference},
+ series = {AFIPS '67 (Spring)},
+ year = {1967},
+ location = {Atlantic City, New Jersey},
+ pages = {483--485},
+ numpages = {3},
+ url = {http://doi.acm.org/10.1145/1465482.1465560},
+ doi = {10.1145/1465482.1465560},
+ acmid = {1465560},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
 %There exists no eletronic version
 
 @phdthesis{Elfes:1989:OGP:916528,
